@@ -77,6 +77,9 @@ public class BrokerInteractiveTokenCommandParameters extends InteractiveTokenCom
     @Expose
     private final String homeTenantId;
 
+    // Parameter representing if this broker request is an ATv2 (Account Transfer V2) request
+    private final boolean isATv2Request;
+
     @Override
     public void validate() throws ArgumentException {
         super.validate();
